# My_Raytracing_Adventures

./: README.md  wordDiff.sh
cpp/: graphics_hello_world.cpp  image.ppm
rust/first-image/: gradient.ppm  image.ppm
rust/first-image/src/: main.rs  ray.rs  vec.rs
rust/graphics-hello-world/: Cargo.toml  image.ppm
rust/graphics-hello-world/src/: main.rs
rust/raytracer/: Cargo.toml  background-4k.ppm  background-4k_config.json  background.ppm  background_config.json  basic_plane_reflection_world.json  bigimage.ppm  bigimage_config.json  bruh.ppm  bruh_config.json  build.rs  crazy-scene_world.json  crazy_scene_world.json  image.ppm  image_config.json  initial_hack_distribution_image.ppm  normalishimage.ppm  parallel-rayon-timings.txt  parallel-threads-basic-light-sources-timings.txt  parallel-threads-timings.txt  pixels-winit-timings.txt  sample_world.json  sequential-io-at-end-timings.txt  sequential-timings.txt  simple_hemisphere_distribution_image.ppm
rust/raytracer/configs/: background-4k_config.json  background_config.json  bigimage_config.json  image_config.json
rust/raytracer/crazy-images/: background-4k.ppm  background.ppm  bigimage.ppm  image.ppm
rust/raytracer/images/: background-4k.ppm  background.ppm  basic_plane_reflection.ppm  basic_plane_reflection_background.ppm  bigimage.ppm  image.ppm
rust/raytracer/old_configs/: background-4k_config.json  image_config.json
rust/raytracer/src/: camera.rs  gui.rs  hit.rs  lib.rs  main.rs  material.rs  plane.rs  ray.rs  sphere.rs  vec.rs  world_format.rs
