[package]
name = "skean-raytracer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap-serde-derive = "0.2.1"
rand = "0.8.*"
rand_chacha = "0.3.*"
serde = { version = "1.0.197", features = ["derive", "rc"] }
serde_json = "1.0.114"
typetag = "0.2.16"
