[package]
name = "skean-raytracer"
version = "0.1.0"
edition = "2021"
default-run = "skean-raytracer"

# See more keys and their definitions at
# https://doc.rust-lang.org/cargo/reference/manifest.html

# This is basically just to enable optimizations without specifying --release:
# This is the same as the default release profile, but renamed to .dev. I got
# this information from: https://doc.rust-lang.org/cargo/reference/profiles.html#release
[profile.dev]
opt-level = 3
debug = false
# Omitting split-debuginfo because it's not clearly specified on doc.rust-lang.org
strip = "none"
debug-assertions = false
overflow-checks = false
lto = false
panic = 'unwind'
incremental = false
codegen-units = 16
rpath = false


[dependencies]
clap-serde-derive = "0.2.1"
rand = "0.8.*"
rand_chacha = "0.3.*"
serde = { version = "1.0.197", features = ["derive", "rc"] }
serde_json = "1.0.114"
typetag = "0.2.16"
